--- a/MLAssignment/Question1/LassoRegression.ipynb
+++ b/MLAssignment/Question1/LassoRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,46 +11,184 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sklearn\n",
+    "import timeit\n",
     "def load_housing_data():\n",
     "    return pd.read_csv(\"dataset/housing.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load data from dataset\n",
     "housing=load_housing_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  longitude  latitude  housing_median_age  total_rooms  \\\n",
+       "0      0    -122.23     37.88                41.0        880.0   \n",
+       "1      1    -122.22     37.86                21.0       7099.0   \n",
+       "2      2    -122.24     37.85                52.0       1467.0   \n",
+       "3      3    -122.25     37.85                52.0       1274.0   \n",
+       "4      4    -122.25     37.85                52.0       1627.0   \n",
+       "\n",
+       "   total_bedrooms  population  households  median_income  median_house_value  \\\n",
+       "0           129.0       322.0       126.0         8.3252            452600.0   \n",
+       "1          1106.0      2401.0      1138.0         8.3014            358500.0   \n",
+       "2           190.0       496.0       177.0         7.2574            352100.0   \n",
+       "3           235.0       558.0       219.0         5.6431            341300.0   \n",
+       "4           280.0       565.0       259.0         3.8462            342200.0   \n",
+       "\n",
+       "  ocean_proximity  \n",
+       "0        NEAR BAY  \n",
+       "1        NEAR BAY  \n",
+       "2        NEAR BAY  \n",
+       "3        NEAR BAY  \n",
+       "4        NEAR BAY  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "housing=housing.reset_index()"
+    "#set index\n",
+    "housing=housing.reset_index()\n",
+    "#Data \n",
+    "housing.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training/test set using StratifiedShuffleSplit\n",
     "housing[\"income_cat\"]=np.ceil(housing[\"median_income\"]/1.5)\n",
-    "housing[\"income_cat\"].where(housing[\"income_cat\"]<5,5.0,inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "housing[\"income_cat\"].where(housing[\"income_cat\"]<5,5.0,inplace=True)\n",
+    "\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
     "split=StratifiedShuffleSplit(n_splits=3,test_size=0.2,random_state=42)\n",
+    "\n",
     "for train_index,test_index in split.split(housing,housing[\"income_cat\"]):\n",
     "        strat_train_set=housing.loc[train_index]\n",
     "        strat_test_set=housing.loc[test_index]\n"
@@ -58,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,11 +205,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Extract Label attributes from Training Data\n",
+    "\n",
     "housing=strat_train_set.drop(\"median_house_value\",axis=1)\n",
     "housing_labels=strat_train_set[\"median_house_value\"].copy()\n",
     "housing_num=housing.drop(\"ocean_proximity\",axis=1)"
@@ -79,64 +226,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "#Fill Missing value with median of data\n",
+    "\n",
     "imputer = Imputer(strategy=\"median\")\n",
     "housing_num=housing.drop(\"ocean_proximity\",axis=1)\n",
-    "imputer.fit(housing_num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X=imputer.transform(housing_num)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "imputer.fit(housing_num)\n",
+    "X=imputer.transform(housing_num)\n",
     "housing_tr=pd.DataFrame(X,columns=housing_num.columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "#Convert categorical attribute(ocean_proximity) into numerical values using label encoding\n",
+    "\n",
     "encoder=LabelEncoder()\n",
     "housing_cat=housing[\"ocean_proximity\"]\n",
-    "housing_cat_encoded=encoder.fit_transform(housing_cat)"
+    "housing_cat_encoded=encoder.fit_transform(housing_cat)\n",
+    "housing_tr_1=pd.DataFrame(housing_cat_encoded,columns=[\"ocean_proximity\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing_tr_1=pd.DataFrame(housing_cat_encoded,columns=[\"ocean_proximity\"])\n",
+    "#Perform scaling on Numerical Attribute\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(housing_tr)\n",
@@ -146,67 +274,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      index  longitude  latitude  housing_median_age  total_rooms  \\\n",
-      "0 -0.527959   0.684384 -0.738029            1.464498    -0.626342   \n",
-      "1  0.739448   1.258295 -1.323678           -0.288400    -0.059509   \n",
-      "2 -0.098373  -1.087254  0.545714           -1.005495     0.556133   \n",
-      "3  0.160388   0.779204 -0.859844           -0.846141     0.481538   \n",
-      "4  0.071108   0.824119 -0.948863            0.667726    -0.251063   \n",
-      "\n",
-      "   total_bedrooms  population  households  median_income  income_cat  \\\n",
-      "0       -0.650005   -0.204092   -0.625833      -0.753784   -0.954456   \n",
-      "1       -0.456875   -0.314209   -0.390613       0.985693    0.942051   \n",
-      "2        0.198812    0.325518    0.291527       0.269602   -0.006202   \n",
-      "3        0.375251    0.343871    0.398683      -0.113819   -0.006202   \n",
-      "4       -0.063463   -0.658543   -0.286070       0.650443    0.942051   \n",
-      "\n",
-      "   ocean_proximity  \n",
-      "0                0  \n",
-      "1                0  \n",
-      "2                0  \n",
-      "3                0  \n",
-      "4                0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "housing_tr=housing_tr.join(housing_tr_1,lsuffix='_housing_tr', rsuffix='_housing_tr_1')\n",
-    "size1=housing_tr['latitude'].size\n",
-    "ones_matrix=np.ones(size1)\n",
-    "ones_matrix_1=ones_matrix.reshape((size1,1))\n",
-    "print(housing_tr.head())\n"
+    "\n",
+    "housing_tr=housing_tr.join(housing_tr_1,lsuffix='_housing_tr', rsuffix='_housing_tr_1')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lasso Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69424.92265989268\n"
+      "('Training Time', 0.08852410316467285)\n",
+      "('Mean Squared Error: ', 4819819886.332079)\n",
+      "('Root mean squared Error: ', 69424.92265989268)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Apply Lasso Regression using Liberary \n",
+    "\n",
+    "#store current time\n",
+    "start_time=timeit.default_timer()\n",
+    "\n",
     "lassoreg = Lasso(alpha=2,normalize=True, max_iter=1e5)\n",
     "lassoreg.fit(housing_tr,housing_labels)\n",
+    "\n",
+    "#store end time\n",
+    "end_time=timeit.default_timer()\n",
+    "\n",
     "y_pred = lassoreg.predict(housing_tr)\n",
     "lin_mse=mean_squared_error(housing_labels,y_pred)\n",
     "lin_rmse=np.sqrt(lin_mse)\n",
-    "print(lin_rmse)"
+    "\n",
+    "print(\"Training Time\",end_time-start_time)\n",
+    "print(\"Mean Squared Error: \",lin_mse)\n",
+    "print(\"Root mean squared Error: \",lin_rmse)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
